--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "sidebar": {
+    "viewer": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,17 +13,18 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/sidebar",
+            "outputPath": "dist/viewer",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "aot": true,
+            "aot": false,
             "assets": [
               "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -62,18 +63,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "sidebar:build"
+            "browserTarget": "viewer:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "sidebar:build:production"
+              "browserTarget": "viewer:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "sidebar:build"
+            "browserTarget": "viewer:build"
           }
         },
         "test": {
@@ -88,6 +89,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -110,15 +112,19 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "sidebar:serve"
+            "devServerTarget": "viewer:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "sidebar:serve:production"
+              "devServerTarget": "viewer:serve:production"
             }
           }
         }
       }
-    }},
-  "defaultProject": "sidebar"
+    }
+  },
+  "defaultProject": "viewer",
+  "cli": {
+    "analytics": "aa73b905-505e-400d-a80a-d9c139a400ca"
+  }
 }
