--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sidebar",
+  "name": "viewer",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,27 +11,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.11",
-    "@angular/common": "~10.0.11",
-    "@angular/compiler": "~10.0.11",
-    "@angular/core": "~10.0.11",
-    "@angular/forms": "~10.0.11",
-    "@angular/platform-browser": "~10.0.11",
-    "@angular/platform-browser-dynamic": "~10.0.11",
-    "@angular/router": "~10.0.11",
+    "@angular/animations": "~10.0.0",
+    "@angular/cdk": "^10.2.4",
+    "@angular/common": "~10.0.0",
+    "@angular/compiler": "~10.0.0",
+    "@angular/core": "~10.0.0",
+    "@angular/forms": "~10.0.0",
+    "@angular/material": "^10.2.4",
+    "@angular/platform-browser": "~10.0.0",
+    "@angular/platform-browser-dynamic": "~10.0.0",
+    "@angular/router": "~10.0.0",
     "ol": "^6.4.3",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.7",
-    "@angular/cli": "~10.0.7",
-    "@angular/compiler-cli": "~10.0.11",
+    "@angular-devkit/build-angular": "~0.1000.0",
+    "@angular/cli": "~10.0.0",
+    "@angular/compiler-cli": "~10.0.0",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^6.0.0",
+    "codelyzer": "^6.0.0-next.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
