--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~10.0.0",
     "@turf/along": "^6.0.1",
     "@turf/turf": "^5.1.6",
+    "firebase": "^8.1.1",
     "ol": "^6.4.3",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
