--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@turf/along": "^6.0.1",
     "@turf/turf": "^5.1.6",
     "firebase": "^8.1.1",
+    "jquery": "^3.5.1",
+    "jstree": "^3.3.10",
     "ol": "^6.4.3",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
@@ -33,9 +35,11 @@
     "@angular-devkit/build-angular": "~0.1000.0",
     "@angular/cli": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.5.4",
+    "@types/jstree": "^3.3.40",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0-next.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
