--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.5.1",
     "jstree": "^3.3.10",
     "ol": "^6.4.3",
+    "polygon-clipping": "^0.15.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
